examples/test/testpolicy2065.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2065
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key14: value31
      key32: value33
      key19: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
          key4: value38
      podSelector:
        matchLabels:
          key31: value42
